add field for num records in db

--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-06T19:07:15.002617Z",
-     "start_time": "2020-02-06T19:06:51.426617Z"
+     "end_time": "2020-02-10T16:31:36.751617Z",
+     "start_time": "2020-02-10T16:31:18.344617Z"
     }
    },
    "outputs": [],
@@ -78,11 +78,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-06T19:07:48.730617Z",
-     "start_time": "2020-02-06T19:07:30.040617Z"
+     "end_time": "2020-02-10T16:25:10.924617Z",
+     "start_time": "2020-02-10T16:24:49.475617Z"
     }
    },
    "outputs": [],
@@ -93,11 +93,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-06T19:07:29.244617Z",
-     "start_time": "2020-02-06T19:07:26.964617Z"
+     "end_time": "2020-02-10T16:24:14.681617Z",
+     "start_time": "2020-02-10T16:24:12.222617Z"
     }
    },
    "outputs": [],
@@ -181,11 +181,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-07T16:24:55.259617Z",
-     "start_time": "2020-02-07T16:21:33.387617Z"
+     "end_time": "2020-02-10T16:46:50.480617Z",
+     "start_time": "2020-02-10T16:40:07.977617Z"
     }
    },
    "outputs": [
@@ -205,273 +205,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-02-07T20:46:10.266617Z",
      "start_time": "2020-02-07T20:43:23.226617Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "APMInsuranceCarrierDimID\n",
-      "AbnormalityDimID\n",
-      "AccommodationDimID\n",
-      "AccountDimID\n",
-      "AccountTypeDimID\n",
-      "ActionCodedReasonTypeDimID\n",
-      "ActionReasonDimID\n",
-      "ActionTypeDimID\n",
-      "AdmitDateDimID\n",
-      "AdmitReasonDimID\n",
-      "AdmitShiftDimID\n",
-      "AdmitSourceDimID\n",
-      "AdmitTypeDimID\n",
-      "AgeDimID\n",
-      "AgeRangeItemID\n",
-      "AgeRangeSetID\n",
-      "AlertEventTypeDimID\n",
-      "AlertNameDimID\n",
-      "AlertTypeDimID\n",
-      "AllergenDimID\n",
-      "AllergyCategoryTypeDimID\n",
-      "AllergyTypeDimID\n",
-      "AmbulStatusDimID\n",
-      "AncillaryFacilityDimID\n",
-      "ApplicSourceDimID\n",
-      "AppointmentCategoryDimID\n",
-      "ArrivalDateDimID\n",
-      "AuthoredProviderDimID\n",
-      "BillingAddressDimID\n",
-      "BlockDefinitionDimID\n",
-      "CareLevelDimID\n",
-      "CatalogItemTaskGUID\n",
-      "CategoryCodeDimID\n",
-      "ChartGUID\n",
-      "ClientDocumentGUID\n",
-      "ClientGUID\n",
-      "ClientUserDataGUID\n",
-      "ClientVisitGUID\n",
-      "ClinDecSupportDescDimID\n",
-      "ClinDecSupportPriorityDimID\n",
-      "CommentDeclarationTypeDimID\n",
-      "ConfidenceDimID\n",
-      "CostDimID\n",
-      "CurrentLocationGUID\n",
-      "DemographicDimID\n",
-      "DestinationTypeDimID\n",
-      "DiagDimID\n",
-      "DiagTypeDimID\n",
-      "DiagnosisGroupID\n",
-      "DiagnosisID\n",
-      "DictionaryID\n",
-      "DischargeDateDimID\n",
-      "DischargeDispositionDimID\n",
-      "DischargeLocationDimID\n",
-      "DischargeServiceDimID\n",
-      "DischargeShiftDimID\n",
-      "DischargeToLocationDimID\n",
-      "DocumentAuthorTypeDimID\n",
-      "DocumentDimID\n",
-      "DocumentID\n",
-      "DocumentNameDimID\n",
-      "DosageCalculatedInfoDimID\n",
-      "DosageTypeDimID\n",
-      "DrugCodeDimID\n",
-      "DrugConcentrationDimID\n",
-      "EDLocationDimID\n",
-      "EduMaterialTypeDimID\n",
-      "EducationDetailDimID\n",
-      "EducationID\n",
-      "EducationMaterialDimID\n",
-      "EducationSourceDimID\n",
-      "EmployerDimID\n",
-      "EmploymentStatusDimID\n",
-      "EndDateDimID\n",
-      "EnterDateDimID\n",
-      "EnterProviderRoleDimID\n",
-      "EnteredDateDimID\n",
-      "EntityID\n",
-      "EthnicityDimID\n",
-      "FacilityDimID\n",
-      "FirstLocationDimID\n",
-      "FollowUpReasonDimID\n",
-      "FrequencyDimID\n",
-      "FunctionalMeasureDimID\n",
-      "FunctionalMeasureObjectiveDimID\n",
-      "FunctionalMeasureSetDimID\n",
-      "GenderDimID\n",
-      "GenericItemID\n",
-      "GroupPracticeDimID\n",
-      "GroupPracticeLocationDimID\n",
-      "HealthIssueDeclarationGUID\n",
-      "HighDosageDimID\n",
-      "HistInfoSourceCodeDimID\n",
-      "IAActivityWeightageDimID\n",
-      "IASubCategoryDimID\n",
-      "ICD10DiagDimID\n",
-      "ICD9DiagDimID\n",
-      "IDCodeDimID\n",
-      "IOSubtypeDimID\n",
-      "IVMedDimID\n",
-      "ImmunizationID\n",
-      "InsuranceCarrierDimID\n",
-      "InsuranceCategoryDimID\n",
-      "InsurancePlanDimID\n",
-      "InsuranceTypeDimID\n",
-      "LanguageDimID\n",
-      "LinkedVisitID\n",
-      "LocationDimID\n",
-      "LocationFunctionGroupDimID\n",
-      "LocationGUID\n",
-      "LowDosageDimID\n",
-      "MedFormDimID\n",
-      "MedRouteDimID\n",
-      "MedicalCodeDimID\n",
-      "MedicationCategoryDimID\n",
-      "MedicationChartingID\n",
-      "MedicationDimID\n",
-      "MedicationGroupID\n",
-      "MedicationID\n",
-      "ModeOfArrivalDimID\n",
-      "ModifiedDateDimID\n",
-      "ObjGUID\n",
-      "ObsCatalogDimID\n",
-      "ObsCatalogNameDimID\n",
-      "ObsDictCodeDimID\n",
-      "ObsValidValueDimID\n",
-      "ObsValueDimID\n",
-      "ObservationGUID\n",
-      "OccurrenceStatusTypeDimID\n",
-      "OnsetDateDimID\n",
-      "OrderCatalogDimID\n",
-      "OrderCatalogTagDimID\n",
-      "OrderComponentNameDimID\n",
-      "OrderFunctionDimID\n",
-      "OrderGUID\n",
-      "OrderGroupID\n",
-      "OrderID\n",
-      "OrderReconcileGUID\n",
-      "OrderSessionTypeDimID\n",
-      "OrderSetNameDimID\n",
-      "OrderStatusDimID\n",
-      "OrderTaskChartingID\n",
-      "OrderTaskGUID\n",
-      "OrderTaskID\n",
-      "OrderTaskOccurrenceGUID\n",
-      "OrderTaskStatusDimID\n",
-      "OrderTextDimID\n",
-      "OrderTypeDimID\n",
-      "OrderedAsDimID\n",
-      "OrganizationalUnitDimID\n",
-      "OverrideReasonDimID\n",
-      "ParentGUID\n",
-      "ParentLocationDimID\n",
-      "PatientContactDimID\n",
-      "PatientDataDimID\n",
-      "PatientDimID\n",
-      "PatientStudyID\n",
-      "PerformedDateDimID\n",
-      "PerformedFromDateDimID\n",
-      "PerformedLocationDimID\n",
-      "PerformedToDateDimID\n",
-      "PhysicalNoteDeclarationTypeDimID\n",
-      "PostalCodeDimID\n",
-      "PrescribedActionDimID\n",
-      "PrescriptionID\n",
-      "PrescriptionTypeDimID\n",
-      "PresentOnAdmissionDimID\n",
-      "PriorityDimID\n",
-      "ProfileGenerationID\n",
-      "ProfileID\n",
-      "ProjectedScoreCategoryDimID\n",
-      "ProjectedScoreDataFieldDimID\n",
-      "ProviderDimID\n",
-      "ProviderGUID\n",
-      "ProviderRoleDimID\n",
-      "ProviderTypeDimID\n",
-      "QualityEventTimingID\n",
-      "RaceDimID\n",
-      "RadiologyDICOMDimID\n",
-      "RadiologyRADSDimID\n",
-      "ReadmitFromVisitID\n",
-      "ReasonCodeDimID\n",
-      "ReconcileActionTypeDimID\n",
-      "ReconcileCommentDimID\n",
-      "ReconcileItemTypeDimID\n",
-      "ReconcileMedHistoryDimID\n",
-      "ReconcileStatusDimID\n",
-      "ReconcileTypeDimID\n",
-      "ReferringFacilityDimID\n",
-      "RelationshipDimID\n",
-      "ReligionDimID\n",
-      "ReportedDateDimID\n",
-      "ReportingPeriodDimID\n",
-      "RequestedLocationDimID\n",
-      "ResolvedDateDimID\n",
-      "ResourceDimID\n",
-      "ResultCatalogDimID\n",
-      "ResultGroupID\n",
-      "ResultNameDimID\n",
-      "ResultStatusDimID\n",
-      "ResultTypeBridgeID\n",
-      "ReviewCategoryDimID\n",
-      "RxNormCodeDimID\n",
-      "ScheduledEventOccurrenceID\n",
-      "ScopeLevelDimID\n",
-      "ScoreCalculationTypeDimID\n",
-      "ServiceDimID\n",
-      "SeverityDimID\n",
-      "ShiftDimID\n",
-      "ShiftItemID\n",
-      "ShiftSetID\n",
-      "SourceCodeDimID\n",
-      "SpecimenID\n",
-      "SpecimenTypeDimID\n",
-      "StartDateDimID\n",
-      "StatusDimID\n",
-      "StopDateDimID\n",
-      "StudyID\n",
-      "SubOrderSetNameDimID\n",
-      "SurgeryAcuityDimID\n",
-      "SurgeryChargeCodeDimID\n",
-      "SurgeryDeptItemDimID\n",
-      "SurgeryHazardDimID\n",
-      "SurgeryInventorySectionDimID\n",
-      "SurgeryItemCategoryDimID\n",
-      "SurgeryItemDimID\n",
-      "SurgeryLateralityDimID\n",
-      "SurgeryPreferenceCardDimID\n",
-      "SurgeryProcedureDimID\n",
-      "SurgeryRoleDimID\n",
-      "SurgeryRolePolicyDimID\n",
-      "SurgeryServiceDimID\n",
-      "SurgerySiteDimID\n",
-      "SurgeryStaffDimID\n",
-      "SurgeryStatusDimID\n",
-      "SurgeryTimePolicyDimID\n",
-      "TaskUserDataGUID\n",
-      "TriggeringInfoDimID\n",
-      "UOMDimID\n",
-      "UnitLocationDimID\n",
-      "UserActionDimID\n",
-      "UserOrderRoleDimID\n",
-      "UserProviderDimID\n",
-      "VaccineDimID\n",
-      "VisitID\n",
-      "VisitIDGUID\n",
-      "VisitStatusDimID\n",
-      "VisitTypeDimID\n",
-      "Visitid\n",
-      "WellnessEventDetailDimID\n",
-      "WellnessEventDimID\n",
-      "medicationdimid\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "y = db_structure.DBLinker(dataset_name='SCA_AcuteCare')\n",
     "for i in y.get_common_column_names():\n",
@@ -482,11 +223,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-07T16:21:07.402617Z",
-     "start_time": "2020-02-07T16:21:04.725617Z"
+     "end_time": "2020-02-10T16:39:45.782617Z",
+     "start_time": "2020-02-10T16:39:43.779617Z"
     }
    },
    "outputs": [],
@@ -496,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-02-10T15:37:05.932617Z",
@@ -510,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-02-10T15:37:08.682617Z",
@@ -530,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-02-10T15:37:12.322617Z",
@@ -544,67 +285,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-02-10T15:37:16.183617Z",
      "start_time": "2020-02-10T15:37:14.034617Z"
     }
    },
+   "outputs": [],
+   "source": [
+    "agg_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-10T16:18:17.641617Z",
+     "start_time": "2020-02-10T16:18:15.355617Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "math.ceil(50/100*25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-10T16:39:00.103617Z",
+     "start_time": "2020-02-10T16:38:57.693617Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from web import db\n",
+    "db.session.rollback()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-10T16:34:59.060617Z",
+     "start_time": "2020-02-10T16:34:57.261617Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "query = f\"SELECT tbl.name, MAX(CAST(p.rows AS int)) AS rows FROM sys.tables AS tbl INNER JOIN sys.indexes AS idx ON idx.object_id = tbl.object_id and idx.index_id < 2 INNER JOIN sys.partitions AS p ON p.object_id=CAST(tbl.object_id AS int) AND p.index_id=idx.index_id WHERE (SCHEMA_NAME(tbl.schema_id)='dbo') GROUP BY tbl.name\"\n",
+    "num_rows_df = db_structure.execute_sql_query(query=query, sql_server='CYKPANADBSQL', sql_db='SCA_AcuteCare')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-10T16:37:07.528617Z",
+     "start_time": "2020-02-10T16:37:06.018617Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "min_rows=1000\n",
+    "max_rows=10000\n",
+    "analyze_percentage=50\n",
+    "num_rows_in_db = num_rows_df[num_rows_df['name'] == 'CV3ClientVisit_Test'].iloc[0]['rows']\n",
+    "by_percentage = math.ceil(analyze_percentage / 100 * num_rows_in_db)\n",
+    "if by_percentage < min_rows:\n",
+    "    num_rows = min_rows\n",
+    "elif by_percentage > max_rows:\n",
+    "    num_rows = max_rows\n",
+    "else:\n",
+    "    num_rows = by_percentage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-10T16:37:21.860617Z",
+     "start_time": "2020-02-10T16:37:20.379617Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>BF_FoleyTimes_FoleyDays</th>\n",
-       "      <th>groupby_labels</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>3.22</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>6.49</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   BF_FoleyTimes_FoleyDays groupby_labels\n",
-       "0                     3.22              0\n",
-       "1                     6.49              1"
+       "4915"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "agg_df"
+    "num_rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-10T16:37:16.705617Z",
+     "start_time": "2020-02-10T16:37:15.195617Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9829"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_rows_in_db"
    ]
   },
   {
