start to separate out graph

--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,14 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-10T16:31:36.751617Z",
-     "start_time": "2020-02-10T16:31:18.344617Z"
+     "end_time": "2020-02-10T17:58:11.093617Z",
+     "start_time": "2020-02-10T17:58:09.095617Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import csv\n",
@@ -29,6 +38,7 @@
     "from pandas.api.types import is_numeric_dtype\n",
     "from web.models import *\n",
     "from web import db\n",
+    "import graph\n",
     "\n",
     "logging.basicConfig(format=' %(asctime)s - %(levelname)s - %(message)s')\n",
     "logger = logging.getLogger()\n",
@@ -415,6 +425,112 @@
    ],
    "source": [
     "num_rows_in_db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-10T19:20:35.981617Z",
+     "start_time": "2020-02-10T19:20:34.377617Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "[]\n",
+      "['A']\n",
+      "['C', 'D']\n",
+      "['E']\n",
+      "['F']\n",
+      "['B']\n",
+      "['A']\n",
+      "['D']\n",
+      "[['A', 'C', 'F'], ['A', 'D', 'C', 'F'], ['A', 'B', 'E', 'F']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "g = graph.Graph()\n",
+    "g.add_node('A')\n",
+    "g.add_node('B')\n",
+    "g.add_node('C')\n",
+    "g.add_node('D')\n",
+    "g.add_node('E')\n",
+    "g.add_node('F')\n",
+    "g.add_edge('A', 'C')\n",
+    "g.add_edge('A', 'D')\n",
+    "g.add_edge('A', 'B')\n",
+    "g.add_edge('B', 'A')\n",
+    "g.add_edge('B', 'E')\n",
+    "g.add_edge('C', 'D')\n",
+    "g.add_edge('C', 'F')\n",
+    "g.add_edge('D', 'C')\n",
+    "g.add_edge('E', 'F')\n",
+    "print(g.get_node_parents('A'))  # []\n",
+    "print(g.get_node_parents('B'))  # []\n",
+    "print(g.get_node_parents('C'))  # ['A']\n",
+    "print(g.get_node_children('A')) # ['C']\n",
+    "print(g.get_node_children('B')) # []\n",
+    "print(g.get_node_children('C')) # []\n",
+    "print(g.get_node_siblings('A')) # ['B']\n",
+    "print(g.get_node_siblings('B')) # ['A']\n",
+    "print(g.get_node_siblings('C')) # []\n",
+    "print(g.find_paths_between_nodes('A', 'F'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-10T18:50:35.608617Z",
+     "start_time": "2020-02-10T18:50:33.596617Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[autoreload of graph failed: Traceback (most recent call last):\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 245, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 368, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\lib\\imp.py\", line 315, in reload\n",
+      "    return importlib.reload(module)\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\lib\\importlib\\__init__.py\", line 166, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 618, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 674, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 781, in get_code\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 741, in source_to_code\n",
+      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
+      "  File \"C:\\Users\\SShah50\\Documents\\Programming\\cohort-visualization\\graph\\__init__.py\", line 26\n",
+      "    connectable_nodes = [ for x in self.nodes[node].edges]\n",
+      "                            ^\n",
+      "SyntaxError: invalid syntax\n",
+      "]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'B': <graph.Edge at 0x1438c208>, 'C': <graph.Edge at 0x1438c630>}"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g.nodes['A'].edges"
    ]
   },
   {
