use objects in paths

--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -429,11 +429,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 125,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-10T19:20:35.981617Z",
-     "start_time": "2020-02-10T19:20:34.377617Z"
+     "end_time": "2020-02-11T18:29:42.216617Z",
+     "start_time": "2020-02-11T18:29:40.292617Z"
     }
    },
    "outputs": [
@@ -443,14 +443,14 @@
      "text": [
       "[]\n",
       "[]\n",
-      "['A']\n",
-      "['C', 'D']\n",
-      "['E']\n",
-      "['F']\n",
-      "['B']\n",
-      "['A']\n",
-      "['D']\n",
-      "[['A', 'C', 'F'], ['A', 'D', 'C', 'F'], ['A', 'B', 'E', 'F']]\n"
+      "[A]\n",
+      "[C, D]\n",
+      "[E]\n",
+      "[F]\n",
+      "[B]\n",
+      "[A]\n",
+      "[D]\n",
+      "[<graph.Path object at 0x0000000014F3E748>, <graph.Path object at 0x0000000015255320>, <graph.Path object at 0x0000000015252080>]\n"
      ]
     }
    ],
@@ -471,66 +471,69 @@
     "g.add_edge('C', 'F')\n",
     "g.add_edge('D', 'C')\n",
     "g.add_edge('E', 'F')\n",
-    "print(g.get_node_parents('A'))  # []\n",
-    "print(g.get_node_parents('B'))  # []\n",
-    "print(g.get_node_parents('C'))  # ['A']\n",
-    "print(g.get_node_children('A')) # ['C']\n",
-    "print(g.get_node_children('B')) # []\n",
-    "print(g.get_node_children('C')) # []\n",
-    "print(g.get_node_siblings('A')) # ['B']\n",
-    "print(g.get_node_siblings('B')) # ['A']\n",
-    "print(g.get_node_siblings('C')) # []\n",
+    "print(g.get_node_parents('A'))  \n",
+    "print(g.get_node_parents('B'))  \n",
+    "print(g.get_node_parents('C'))  \n",
+    "print(g.get_node_children('A')) \n",
+    "print(g.get_node_children('B')) \n",
+    "print(g.get_node_children('C')) \n",
+    "print(g.get_node_siblings('A')) \n",
+    "print(g.get_node_siblings('B')) \n",
+    "print(g.get_node_siblings('C')) \n",
     "print(g.find_paths_between_nodes('A', 'F'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 114,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-10T18:50:35.608617Z",
-     "start_time": "2020-02-10T18:50:33.596617Z"
+     "end_time": "2020-02-11T15:40:55.858617Z",
+     "start_time": "2020-02-11T15:40:54.234617Z"
     }
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[autoreload of graph failed: Traceback (most recent call last):\n",
-      "  File \"C:\\ProgramData\\Anaconda3\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 245, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"C:\\ProgramData\\Anaconda3\\lib\\site-packages\\IPython\\extensions\\autoreload.py\", line 368, in superreload\n",
-      "    module = reload(module)\n",
-      "  File \"C:\\ProgramData\\Anaconda3\\lib\\imp.py\", line 315, in reload\n",
-      "    return importlib.reload(module)\n",
-      "  File \"C:\\ProgramData\\Anaconda3\\lib\\importlib\\__init__.py\", line 166, in reload\n",
-      "    _bootstrap._exec(spec, module)\n",
-      "  File \"<frozen importlib._bootstrap>\", line 618, in _exec\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 674, in exec_module\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 781, in get_code\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 741, in source_to_code\n",
-      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
-      "  File \"C:\\Users\\SShah50\\Documents\\Programming\\cohort-visualization\\graph\\__init__.py\", line 26\n",
-      "    connectable_nodes = [ for x in self.nodes[node].edges]\n",
-      "                            ^\n",
-      "SyntaxError: invalid syntax\n",
-      "]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{'B': <graph.Edge at 0x1438c208>, 'C': <graph.Edge at 0x1438c630>}"
+       "dict_keys([C, D, B])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "g.nodes['A'].edges"
+    "g.nodes['A'].accessible_nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-11T15:41:40.051617Z",
+     "start_time": "2020-02-11T15:41:38.461617Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "for check_node in g.nodes:\n",
+    "    print(check_node == 'A')"
    ]
   },
   {
