--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -429,31 +429,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 148,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-11T18:29:42.216617Z",
-     "start_time": "2020-02-11T18:29:40.292617Z"
+     "end_time": "2020-02-11T19:20:14.687617Z",
+     "start_time": "2020-02-11T19:20:12.509617Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n",
-      "[]\n",
-      "[A]\n",
-      "[C, D]\n",
-      "[E]\n",
-      "[F]\n",
-      "[B]\n",
-      "[A]\n",
-      "[D]\n",
-      "[<graph.Path object at 0x0000000014F3E748>, <graph.Path object at 0x0000000015255320>, <graph.Path object at 0x0000000015252080>]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "g = graph.Graph()\n",
     "g.add_node('A')\n",
@@ -471,41 +454,32 @@
     "g.add_edge('C', 'F')\n",
     "g.add_edge('D', 'C')\n",
     "g.add_edge('E', 'F')\n",
-    "print(g.get_node_parents('A'))  \n",
-    "print(g.get_node_parents('B'))  \n",
-    "print(g.get_node_parents('C'))  \n",
-    "print(g.get_node_children('A')) \n",
-    "print(g.get_node_children('B')) \n",
-    "print(g.get_node_children('C')) \n",
-    "print(g.get_node_siblings('A')) \n",
-    "print(g.get_node_siblings('B')) \n",
-    "print(g.get_node_siblings('C')) \n",
-    "print(g.find_paths_between_nodes('A', 'F'))"
+    "paths = g.find_paths_between_nodes('A', 'F')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 151,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-11T15:40:55.858617Z",
-     "start_time": "2020-02-11T15:40:54.234617Z"
+     "end_time": "2020-02-11T19:21:14.378617Z",
+     "start_time": "2020-02-11T19:21:12.675617Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys([C, D, B])"
+       "{'nodes': [A, C, F], 'edges': [A--(0)-->C, C--(0)-->F]}"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "g.nodes['A'].accessible_nodes"
+    "paths[0].__dict__"
    ]
   },
   {
@@ -534,6 +508,34 @@
    "source": [
     "for check_node in g.nodes:\n",
     "    print(check_node == 'A')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-11T20:06:27.582617Z",
+     "start_time": "2020-02-11T20:06:25.926617Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'c']"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [3, 5, 3]\n",
+    "y = ['a', 'b', 'c']\n",
+    "idx = [i for i in range(len(x)) if x[i] == min(x)]\n",
+    "[y[i] for i in idx]"
    ]
   },
   {
